Fix button width calculation, white space no wrap

--- a/file-upload.css
+++ b/file-upload.css
@@ -39,6 +39,7 @@
 
 .file-upload.custom strong { 
 	font: normal 1.75em arial,sans-serif; 
+	white-space:nowrap;
 	}	
 	
 .file-upload.custom span {
